fix policy and vehicle