@@ -1,542 +1,362 @@
 package org.example.service.Serviceimpl;
 
 import java.time.LocalDate;
-import java.time.OffsetDateTime;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import org.example.models.core.WarrantyPolicy;
 import org.example.models.dto.request.WarrantyPolicyCreateRequest;
+import org.example.models.dto.request.WarrantyPolicyUpdateRequest;
 import org.example.models.dto.response.WarrantyPolicyResponse;
 import org.example.repository.IRepository.IWarrantyPolicyRepository;
 import org.example.service.IService.IWarrantyPolicyService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
 
-/**
- * Service implementation for Warranty Policy management
- * Handles business logic for warranty policy operations
- */
+import com.fasterxml.jackson.databind.ObjectMapper;
+
 @Service
-@Transactional
 public class WarrantyPolicyService implements IWarrantyPolicyService {
 
     @Autowired
     private IWarrantyPolicyRepository warrantyPolicyRepository;
 
+    private final ObjectMapper objectMapper = new ObjectMapper();
+
     @Override
-    public WarrantyPolicyResponse createWarrantyPolicy(WarrantyPolicyCreateRequest request, Long oemId) {
-        // Validate input parameters
-        if (request == null) {
-            throw new IllegalArgumentException("Request cannot be null");
-        }
-        if (request.getModel() == null || request.getModel().trim().isEmpty()) {
-            throw new IllegalArgumentException("Model cannot be null or empty");
-        }
-        if (request.getComponentCategory() == null || request.getComponentCategory().trim().isEmpty()) {
-            throw new IllegalArgumentException("Component category cannot be null or empty");
-        }
-        if (request.getMonthsCoverage() == null || request.getMonthsCoverage() <= 0) {
-            throw new IllegalArgumentException("Months coverage must be greater than 0");
-        }
-        if (request.getKmCoverage() != null && request.getKmCoverage() < 0) {
-            throw new IllegalArgumentException("Km coverage cannot be negative");
-        }
-        if (oemId == null) {
-            throw new IllegalArgumentException("OEM ID cannot be null");
+    public WarrantyPolicyResponse createPolicy(WarrantyPolicyCreateRequest request) {
+        validateCreateRequest(request);
+
+        // Check if policy code already exists
+        if (warrantyPolicyRepository.existsByPolicyCode(request.getPolicyCode())) {
+            throw new RuntimeException("Policy code already exists: " + request.getPolicyCode());
         }
 
-        // Validate policy code uniqueness
-        String policyCode = request.getModel().trim() + "_" + request.getComponentCategory().trim();
-        if (warrantyPolicyRepository.existsByPolicyCode(policyCode)) {
-            throw new IllegalArgumentException("Policy code already exists: " + policyCode);
-        }
-
-        // Create new warranty policy
         WarrantyPolicy policy = new WarrantyPolicy();
-        policy.setOemId(oemId);
-        policy.setPolicyName(request.getModel().trim() + " - " + request.getComponentCategory().trim());
-        policy.setPolicyCode(policyCode);
+        policy.setOemId(request.getOemId());
+        policy.setPolicyName(request.getPolicyName());
+        policy.setPolicyCode(request.getPolicyCode());
+        policy.setWarrantyPeriodMonths(request.getWarrantyMonths());
+        policy.setWarrantyKmLimit(request.getWarrantyKm());
+        policy.setIsActive(true); // Default to active
+        policy.setIsDefault(request.getIsDefault() != null ? request.getIsDefault() : false);
+        policy.setEffectiveFrom(request.getEffectiveFrom() != null
+                ? request.getEffectiveFrom()
+                : LocalDate.now());
+        policy.setEffectiveTo(request.getEffectiveTo());
 
-        // Map to database fields
-        policy.setWarrantyPeriodMonths(request.getMonthsCoverage());
-        // 0 or null means unlimited km coverage
-        policy.setWarrantyKmLimit(
-                request.getKmCoverage() == null || request.getKmCoverage() == 0 ? null : request.getKmCoverage());
+        // Build coverage details JSON
+        String coverageDetails = buildCoverageDetailsJson(
+                request.getBatteryCoverageMonths(),
+                request.getBatteryCoverageKm(),
+                request.getMotorCoverageMonths(),
+                request.getMotorCoverageKm(),
+                request.getInverterCoverageMonths(),
+                request.getInverterCoverageKm());
+        policy.setCoverageDetails(coverageDetails);
 
-        // Set coverage details as JSON (compact format, no pretty-printing)
-        String category = request.getComponentCategory().trim().toLowerCase();
-        String kmJson = (request.getKmCoverage() == null || request.getKmCoverage() == 0)
-                ? ""
-                : "\"km\": " + request.getKmCoverage() + ",";
-        String coverageJson = String.format(
-                "{\"%s\":{\"months\":%d,%s\"service_coverage\":\"free\",\"parts_coverage\":\"free\",\"conditions\":[\"normal_use\"]}}",
-                category, request.getMonthsCoverage(), kmJson);
-        policy.setCoverageDetails(coverageJson);
-
-        policy.setIsActive(true);
-        policy.setIsDefault(false);
-        policy.setEffectiveFrom(LocalDate.now());
-        policy.setEffectiveTo(LocalDate.now().plusYears(10)); // Default 10 years validity
-        policy.setCreatedAt(OffsetDateTime.now());
-        policy.setUpdatedAt(OffsetDateTime.now());
-
-        WarrantyPolicy savedPolicy = warrantyPolicyRepository.save(policy);
-        return convertToResponse(savedPolicy);
+        WarrantyPolicy saved = warrantyPolicyRepository.save(policy);
+        return toResponse(saved);
     }
 
     @Override
-    public WarrantyPolicyResponse getWarrantyPolicyById(Long policyId) {
-        Optional<WarrantyPolicy> policy = warrantyPolicyRepository.findById(policyId);
-        if (policy.isPresent()) {
-            return convertToResponse(policy.get());
+    public WarrantyPolicyResponse getPolicyById(Long policyId) {
+        Optional<WarrantyPolicy> opt = warrantyPolicyRepository.findById(policyId);
+        if (opt.isEmpty()) {
+            throw new RuntimeException("Warranty policy not found");
         }
-        throw new IllegalArgumentException("Warranty policy not found with ID: " + policyId);
+        return toResponse(opt.get());
     }
 
     @Override
-    public WarrantyPolicyResponse getWarrantyPolicyByCode(String policyCode) {
-        Optional<WarrantyPolicy> policy = warrantyPolicyRepository.findByPolicyCode(policyCode);
-        if (policy.isPresent()) {
-            return convertToResponse(policy.get());
-        }
-        throw new IllegalArgumentException("Warranty policy not found with code: " + policyCode);
-    }
-
-    @Override
-    public WarrantyPolicyResponse updateWarrantyPolicy(Long policyId, WarrantyPolicyCreateRequest request) {
-        Optional<WarrantyPolicy> existingPolicyOpt = warrantyPolicyRepository.findById(policyId);
-        if (existingPolicyOpt.isEmpty()) {
-            throw new IllegalArgumentException("Warranty policy not found with ID: " + policyId);
+    public WarrantyPolicyResponse updatePolicy(Long policyId, WarrantyPolicyUpdateRequest request) {
+        Optional<WarrantyPolicy> opt = warrantyPolicyRepository.findById(policyId);
+        if (opt.isEmpty()) {
+            throw new RuntimeException("Warranty policy not found");
         }
 
-        WarrantyPolicy existingPolicy = existingPolicyOpt.get();
+        WarrantyPolicy policy = opt.get();
 
-        // Update policy details
-        existingPolicy.setPolicyName(request.getModel() + " - " + request.getComponentCategory());
-        existingPolicy.setWarrantyPeriodMonths(request.getMonthsCoverage());
-        existingPolicy.setWarrantyKmLimit(request.getKmCoverage());
-        existingPolicy.setUpdatedAt(OffsetDateTime.now());
+        if (request.getPolicyName() != null) {
+            policy.setPolicyName(request.getPolicyName());
+        }
+        if (request.getPolicyCode() != null) {
+            // Check if new policy code conflicts with existing one
+            Optional<WarrantyPolicy> existing = warrantyPolicyRepository.findByPolicyCode(request.getPolicyCode());
+            if (existing.isPresent() && !existing.get().getId().equals(policyId)) {
+                throw new RuntimeException("Policy code already exists: " + request.getPolicyCode());
+            }
+            policy.setPolicyCode(request.getPolicyCode());
+        }
+        if (request.getWarrantyMonths() != null) {
+            policy.setWarrantyPeriodMonths(request.getWarrantyMonths());
+        }
+        if (request.getWarrantyKm() != null) {
+            policy.setWarrantyKmLimit(request.getWarrantyKm());
+        }
+        if (request.getIsActive() != null) {
+            policy.setIsActive(request.getIsActive());
+        }
+        if (request.getIsDefault() != null) {
+            policy.setIsDefault(request.getIsDefault());
+        }
+        if (request.getEffectiveFrom() != null) {
+            policy.setEffectiveFrom(request.getEffectiveFrom());
+        }
+        if (request.getEffectiveTo() != null) {
+            policy.setEffectiveTo(request.getEffectiveTo());
+        }
 
-        // Update coverage details as JSON
-        String category = request.getComponentCategory().toLowerCase();
-        String coverageJson = String.format("""
-                {
-                    "%s": {
-                        "months": %d,
-                        "km": %d,
-                        "service_coverage": "free",
-                        "parts_coverage": "free",
-                        "conditions": ["normal_use"]
-                    }
-                }
-                """, category, request.getMonthsCoverage(), request.getKmCoverage());
-        existingPolicy.setCoverageDetails(coverageJson);
+        // Update coverage details if any coverage field is provided
+        if (request.getBatteryCoverageMonths() != null || request.getBatteryCoverageKm() != null ||
+                request.getMotorCoverageMonths() != null || request.getMotorCoverageKm() != null ||
+                request.getInverterCoverageMonths() != null || request.getInverterCoverageKm() != null) {
 
-        WarrantyPolicy updatedPolicy = warrantyPolicyRepository.save(existingPolicy);
-        return convertToResponse(updatedPolicy);
+            String currentCoverage = policy.getCoverageDetails();
+            String updatedCoverage = updateCoverageDetails(currentCoverage,
+                    request.getBatteryCoverageMonths(),
+                    request.getBatteryCoverageKm(),
+                    request.getMotorCoverageMonths(),
+                    request.getMotorCoverageKm(),
+                    request.getInverterCoverageMonths(),
+                    request.getInverterCoverageKm());
+            policy.setCoverageDetails(updatedCoverage);
+        }
+
+        WarrantyPolicy saved = warrantyPolicyRepository.save(policy);
+        return toResponse(saved);
     }
 
     @Override
-    public boolean deleteWarrantyPolicy(Long policyId) {
+    public boolean deletePolicy(Long policyId) {
         if (!warrantyPolicyRepository.existsById(policyId)) {
-            throw new IllegalArgumentException("Warranty policy not found with ID: " + policyId);
+            return false;
         }
-
-        // Check if policy can be deleted (business rules)
-        if (!canDeletePolicy(policyId)) {
-            throw new IllegalStateException(
-                    "Cannot delete policy: it may be referenced by active claims or is the default policy");
-        }
-
         warrantyPolicyRepository.deleteById(policyId);
         return true;
     }
 
     @Override
-    public List<WarrantyPolicyResponse> getAllWarrantyPolicies(int limit, int offset) {
+    public List<WarrantyPolicyResponse> getAllPolicies(int limit, int offset) {
         List<WarrantyPolicy> policies = warrantyPolicyRepository.findAll();
         return policies.stream()
-                .skip(offset)
-                .limit(limit)
-                .map(this::convertToResponse)
-                .collect(Collectors.toList());
+                .skip(Math.max(0, offset))
+                .limit(limit > 0 ? limit : policies.size())
+                .map(this::toResponse)
+                .toList();
     }
 
     @Override
-    public List<WarrantyPolicyResponse> getWarrantyPoliciesByOem(Long oemId, int limit, int offset) {
+    public List<WarrantyPolicyResponse> getPoliciesByOemId(Long oemId, int limit, int offset) {
         List<WarrantyPolicy> policies = warrantyPolicyRepository.findByOemId(oemId);
         return policies.stream()
-                .skip(offset)
-                .limit(limit)
-                .map(this::convertToResponse)
-                .collect(Collectors.toList());
+                .skip(Math.max(0, offset))
+                .limit(limit > 0 ? limit : policies.size())
+                .map(this::toResponse)
+                .toList();
     }
 
     @Override
-    public List<WarrantyPolicyResponse> getActiveWarrantyPolicies(int limit, int offset) {
-        List<WarrantyPolicy> policies = warrantyPolicyRepository.findAllActive();
+    public List<WarrantyPolicyResponse> getActivePolicies(int limit, int offset) {
+        List<WarrantyPolicy> policies = warrantyPolicyRepository.findActivePolicies();
         return policies.stream()
-                .skip(offset)
-                .limit(limit)
-                .map(this::convertToResponse)
-                .collect(Collectors.toList());
+                .skip(Math.max(0, offset))
+                .limit(limit > 0 ? limit : policies.size())
+                .map(this::toResponse)
+                .toList();
     }
 
     @Override
-    public List<WarrantyPolicyResponse> getActiveWarrantyPoliciesByOem(Long oemId, int limit, int offset) {
-        List<WarrantyPolicy> policies = warrantyPolicyRepository.findByOemIdAndIsActive(oemId, true);
+    public List<WarrantyPolicyResponse> searchPolicies(String keyword, int limit, int offset) {
+        List<WarrantyPolicy> policies = warrantyPolicyRepository.findByPolicyNameContainingIgnoreCase(keyword);
         return policies.stream()
-                .skip(offset)
-                .limit(limit)
-                .map(this::convertToResponse)
-                .collect(Collectors.toList());
+                .skip(Math.max(0, offset))
+                .limit(limit > 0 ? limit : policies.size())
+                .map(this::toResponse)
+                .toList();
     }
 
     @Override
-    public List<WarrantyPolicyResponse> searchWarrantyPolicies(String keyword, int limit, int offset) {
-        List<WarrantyPolicy> policies = warrantyPolicyRepository.searchPolicies(keyword);
-        return policies.stream()
-                .skip(offset)
-                .limit(limit)
-                .map(this::convertToResponse)
-                .collect(Collectors.toList());
-    }
-
-    @Override
-    public List<WarrantyPolicyResponse> searchWarrantyPoliciesByOem(Long oemId, String keyword, int limit, int offset) {
-        List<WarrantyPolicy> allPolicies = warrantyPolicyRepository.findByOemId(oemId);
-        List<WarrantyPolicy> filteredPolicies = allPolicies.stream()
-                .filter(policy -> policy.getPolicyName().toLowerCase().contains(keyword.toLowerCase()) ||
-                        policy.getPolicyCode().toLowerCase().contains(keyword.toLowerCase()))
-                .collect(Collectors.toList());
-
-        return filteredPolicies.stream()
-                .skip(offset)
-                .limit(limit)
-                .map(this::convertToResponse)
-                .collect(Collectors.toList());
-    }
-
-    @Override
-    public WarrantyPolicyResponse getDefaultPolicyByOem(Long oemId) {
-        Optional<WarrantyPolicy> defaultPolicy = warrantyPolicyRepository.findByIsDefaultAndOemId(true, oemId);
-        if (defaultPolicy.isPresent()) {
-            return convertToResponse(defaultPolicy.get());
+    public WarrantyPolicyResponse getPolicyByPolicyCode(String policyCode) {
+        Optional<WarrantyPolicy> opt = warrantyPolicyRepository.findByPolicyCode(policyCode);
+        if (opt.isEmpty()) {
+            throw new RuntimeException("Warranty policy not found");
         }
-        throw new IllegalArgumentException("No default policy found for OEM ID: " + oemId);
+        return toResponse(opt.get());
     }
 
     @Override
-    public boolean setDefaultPolicy(Long policyId, Long oemId) {
-        Optional<WarrantyPolicy> policyOpt = warrantyPolicyRepository.findById(policyId);
-        if (policyOpt.isEmpty()) {
-            throw new IllegalArgumentException("Warranty policy not found with ID: " + policyId);
+    public WarrantyPolicyResponse getDefaultPolicyByOemId(Long oemId) {
+        Optional<WarrantyPolicy> opt = warrantyPolicyRepository.findByOemIdAndIsDefault(oemId, true);
+        if (opt.isEmpty()) {
+            throw new RuntimeException("Default warranty policy not found for OEM ID: " + oemId);
         }
+        return toResponse(opt.get());
+    }
 
-        WarrantyPolicy policy = policyOpt.get();
-
-        // Remove default status from other policies of the same OEM
-        List<WarrantyPolicy> existingDefaults = warrantyPolicyRepository.findByIsDefaultAndOemId(true, oemId).stream()
-                .filter(p -> !p.getId().equals(policyId))
-                .collect(Collectors.toList());
-
-        for (WarrantyPolicy existingDefault : existingDefaults) {
-            existingDefault.setIsDefault(false);
-            warrantyPolicyRepository.save(existingDefault);
+    @Override
+    public boolean activatePolicy(Long policyId) {
+        Optional<WarrantyPolicy> opt = warrantyPolicyRepository.findById(policyId);
+        if (opt.isEmpty()) {
+            return false;
         }
-
-        // Set this policy as default
-        policy.setIsDefault(true);
-        policy.setUpdatedAt(OffsetDateTime.now());
+        WarrantyPolicy policy = opt.get();
+        policy.setIsActive(true);
         warrantyPolicyRepository.save(policy);
-
         return true;
     }
 
     @Override
-    public boolean removeDefaultPolicy(Long policyId) {
-        Optional<WarrantyPolicy> policyOpt = warrantyPolicyRepository.findById(policyId);
-        if (policyOpt.isEmpty()) {
-            throw new IllegalArgumentException("Warranty policy not found with ID: " + policyId);
+    public boolean deactivatePolicy(Long policyId) {
+        Optional<WarrantyPolicy> opt = warrantyPolicyRepository.findById(policyId);
+        if (opt.isEmpty()) {
+            return false;
         }
-
-        WarrantyPolicy policy = policyOpt.get();
-        policy.setIsDefault(false);
-        policy.setUpdatedAt(OffsetDateTime.now());
+        WarrantyPolicy policy = opt.get();
+        policy.setIsActive(false);
         warrantyPolicyRepository.save(policy);
-
         return true;
     }
 
     @Override
-    public boolean activateWarrantyPolicy(Long policyId) {
-        return updateWarrantyPolicyStatus(policyId, true);
-    }
-
-    @Override
-    public boolean deactivateWarrantyPolicy(Long policyId, String reason) {
-        return updateWarrantyPolicyStatus(policyId, false);
-    }
-
-    @Override
-    public boolean updateWarrantyPolicyStatus(Long policyId, boolean isActive) {
-        Optional<WarrantyPolicy> policyOpt = warrantyPolicyRepository.findById(policyId);
-        if (policyOpt.isEmpty()) {
-            throw new IllegalArgumentException("Warranty policy not found with ID: " + policyId);
-        }
-
-        WarrantyPolicy policy = policyOpt.get();
-        policy.setIsActive(isActive);
-        policy.setUpdatedAt(OffsetDateTime.now());
-        warrantyPolicyRepository.save(policy);
-
-        return true;
-    }
-
-    @Override
-    public List<WarrantyPolicyResponse> getActivePoliciesForDate(LocalDate date) {
-        List<WarrantyPolicy> policies = warrantyPolicyRepository.findActivePoliciesForDate(date);
-        return policies.stream()
-                .map(this::convertToResponse)
-                .collect(Collectors.toList());
-    }
-
-    @Override
-    public List<WarrantyPolicyResponse> getExpiringPolicies(LocalDate beforeDate) {
-        List<WarrantyPolicy> policies = warrantyPolicyRepository.findExpiringPolicies(beforeDate);
-        return policies.stream()
-                .map(this::convertToResponse)
-                .collect(Collectors.toList());
-    }
-
-    @Override
-    public List<WarrantyPolicyResponse> getPoliciesByEffectiveDateRange(LocalDate startDate, LocalDate endDate) {
-        List<WarrantyPolicy> policies = warrantyPolicyRepository.findByEffectiveFromBetween(startDate, endDate);
-        return policies.stream()
-                .map(this::convertToResponse)
-                .collect(Collectors.toList());
-    }
-
-    @Override
-    public List<WarrantyPolicyResponse> getPoliciesByWarrantyMonths(Integer minMonths, Integer maxMonths) {
-        List<WarrantyPolicy> policies;
-        if (minMonths != null && maxMonths != null) {
-            policies = warrantyPolicyRepository.findByWarrantyMonthsBetween(minMonths, maxMonths);
-        } else if (minMonths != null) {
-            policies = warrantyPolicyRepository.findByWarrantyMonthsGreaterThanEqual(minMonths);
-        } else {
-            policies = warrantyPolicyRepository.findAll();
-        }
-
-        return policies.stream()
-                .map(this::convertToResponse)
-                .collect(Collectors.toList());
-    }
-
-    @Override
-    public List<WarrantyPolicyResponse> getPoliciesByWarrantyKm(Integer minKm, Integer maxKm) {
-        List<WarrantyPolicy> policies;
-        if (minKm != null && maxKm != null) {
-            policies = warrantyPolicyRepository.findByWarrantyKmBetween(minKm, maxKm);
-        } else if (minKm != null) {
-            policies = warrantyPolicyRepository.findByWarrantyKmGreaterThanEqual(minKm);
-        } else {
-            policies = warrantyPolicyRepository.findAll();
-        }
-
-        return policies.stream()
-                .map(this::convertToResponse)
-                .collect(Collectors.toList());
-    }
-
-    @Override
-    public List<WarrantyPolicyResponse> getPoliciesByComponentCoverage(String component, Integer minMonths) {
-        List<WarrantyPolicy> policies;
-        String componentLower = component.toLowerCase();
-
-        if (componentLower.contains("battery")) {
-            policies = warrantyPolicyRepository.findByBatteryCoverageMonthsGreaterThanEqual(minMonths);
-        } else if (componentLower.contains("motor")) {
-            policies = warrantyPolicyRepository.findByMotorCoverageMonthsGreaterThanEqual(minMonths);
-        } else if (componentLower.contains("inverter")) {
-            policies = warrantyPolicyRepository.findByInverterCoverageMonthsGreaterThanEqual(minMonths);
-        } else {
-            policies = warrantyPolicyRepository.findAll();
-        }
-
-        return policies.stream()
-                .map(this::convertToResponse)
-                .collect(Collectors.toList());
-    }
-
-    @Override
-    public boolean validatePolicyCode(String policyCode, Long excludePolicyId) {
-        Optional<WarrantyPolicy> existingPolicy = warrantyPolicyRepository.findByPolicyCode(policyCode);
-        return existingPolicy.isEmpty() || existingPolicy.get().getId().equals(excludePolicyId);
-    }
-
-    @Override
-    public boolean validatePolicyDates(LocalDate effectiveFrom, LocalDate effectiveTo) {
-        if (effectiveFrom == null || effectiveTo == null) {
-            return true; // Allow null dates
-        }
-        return !effectiveFrom.isAfter(effectiveTo); // From should not be after To
-    }
-
-    @Override
-    public boolean canDeletePolicy(Long policyId) {
-        Optional<WarrantyPolicy> policyOpt = warrantyPolicyRepository.findById(policyId);
-        if (policyOpt.isEmpty()) {
+    public boolean setAsDefault(Long policyId, Long oemId) {
+        Optional<WarrantyPolicy> opt = warrantyPolicyRepository.findById(policyId);
+        if (opt.isEmpty()) {
             return false;
         }
 
-        WarrantyPolicy policy = policyOpt.get();
-
-        // Cannot delete if it's the default policy
-        // Add more business rules here (e.g., check if referenced by active claims)
-        return !Boolean.TRUE.equals(policy.getIsDefault());
-    }
-
-    @Override
-    public Long countWarrantyPoliciesByOem(Long oemId) {
-        return warrantyPolicyRepository.countByOemId(oemId);
-    }
-
-    @Override
-    public Long countActiveWarrantyPoliciesByOem(Long oemId) {
-        return warrantyPolicyRepository.countByOemIdAndIsActive(oemId, true);
-    }
-
-    @Override
-    public Double getAverageWarrantyMonthsByOem(Long oemId) {
-        return warrantyPolicyRepository.averageWarrantyMonthsByOem(oemId);
-    }
-
-    @Override
-    public Double getAverageWarrantyKmByOem(Long oemId) {
-        return warrantyPolicyRepository.averageWarrantyKmByOem(oemId);
-    }
-
-    @Override
-    public List<WarrantyPolicyResponse> comparePoliciesByOem(Long oemId) {
-        List<WarrantyPolicy> policies = warrantyPolicyRepository.findByOemId(oemId);
-        return policies.stream()
-                .map(this::convertToResponse)
-                .collect(Collectors.toList());
-    }
-
-    @Override
-    public WarrantyPolicyResponse getMostGenerousPolicyByOem(Long oemId) {
-        List<WarrantyPolicy> policies = warrantyPolicyRepository.findByOemIdAndIsActive(oemId, true);
-        if (policies.isEmpty()) {
-            throw new IllegalArgumentException("No active policies found for OEM ID: " + oemId);
+        // Unset other default policies for this OEM
+        List<WarrantyPolicy> existingDefaults = warrantyPolicyRepository.findByOemId(oemId);
+        for (WarrantyPolicy existing : existingDefaults) {
+            if (existing.getIsDefault() != null && existing.getIsDefault()) {
+                existing.setIsDefault(false);
+                warrantyPolicyRepository.save(existing);
+            }
         }
 
-        WarrantyPolicy mostGenerous = policies.stream()
-                .max((p1, p2) -> {
-                    int months1 = Optional.ofNullable(p1.getWarrantyPeriodMonths()).orElse(0);
-                    int months2 = Optional.ofNullable(p2.getWarrantyPeriodMonths()).orElse(0);
-                    int km1 = Optional.ofNullable(p1.getWarrantyKmLimit()).orElse(0);
-                    int km2 = Optional.ofNullable(p2.getWarrantyKmLimit()).orElse(0);
-
-                    // Compare by months first, then by km
-                    int monthsCompare = Integer.compare(months1, months2);
-                    return monthsCompare != 0 ? monthsCompare : Integer.compare(km1, km2);
-                })
-                .orElse(policies.get(0));
-
-        return convertToResponse(mostGenerous);
+        // Set this policy as default
+        WarrantyPolicy policy = opt.get();
+        policy.setIsDefault(true);
+        warrantyPolicyRepository.save(policy);
+        return true;
     }
 
-    @Override
-    public WarrantyPolicyResponse getMostRestrictivePolicyByOem(Long oemId) {
-        List<WarrantyPolicy> policies = warrantyPolicyRepository.findByOemIdAndIsActive(oemId, true);
-        if (policies.isEmpty()) {
-            throw new IllegalArgumentException("No active policies found for OEM ID: " + oemId);
+    private void validateCreateRequest(WarrantyPolicyCreateRequest request) {
+        if (request.getOemId() == null || request.getPolicyName() == null || request.getPolicyCode() == null
+                || request.getWarrantyMonths() == null) {
+            throw new IllegalArgumentException(
+                    "Missing required fields: oemId, policyName, policyCode, warrantyMonths");
         }
-
-        WarrantyPolicy mostRestrictive = policies.stream()
-                .min((p1, p2) -> {
-                    int months1 = Optional.ofNullable(p1.getWarrantyPeriodMonths()).orElse(Integer.MAX_VALUE);
-                    int months2 = Optional.ofNullable(p2.getWarrantyPeriodMonths()).orElse(Integer.MAX_VALUE);
-                    int km1 = Optional.ofNullable(p1.getWarrantyKmLimit()).orElse(Integer.MAX_VALUE);
-                    int km2 = Optional.ofNullable(p2.getWarrantyKmLimit()).orElse(Integer.MAX_VALUE);
-
-                    // Compare by months first, then by km
-                    int monthsCompare = Integer.compare(months1, months2);
-                    return monthsCompare != 0 ? monthsCompare : Integer.compare(km1, km2);
-                })
-                .orElse(policies.get(0));
-
-        return convertToResponse(mostRestrictive);
     }
 
-    /**
-     * Convert WarrantyPolicy entity to WarrantyPolicyResponse DTO
-     */
-    private WarrantyPolicyResponse convertToResponse(WarrantyPolicy policy) {
+    private String buildCoverageDetailsJson(Integer batteryMonths, Integer batteryKm,
+            Integer motorMonths, Integer motorKm,
+            Integer inverterMonths, Integer inverterKm) {
+        try {
+            StringBuilder json = new StringBuilder();
+            json.append("{");
+            json.append("\"battery\":{\"months\":").append(batteryMonths != null ? batteryMonths : "null");
+            json.append(",\"km\":").append(batteryKm != null ? batteryKm : "null").append("},");
+            json.append("\"motor\":{\"months\":").append(motorMonths != null ? motorMonths : "null");
+            json.append(",\"km\":").append(motorKm != null ? motorKm : "null").append("},");
+            json.append("\"inverter\":{\"months\":").append(inverterMonths != null ? inverterMonths : "null");
+            json.append(",\"km\":").append(inverterKm != null ? inverterKm : "null").append("}");
+            json.append("}");
+            return json.toString();
+        } catch (Exception e) {
+            return "{}";
+        }
+    }
+
+    private String updateCoverageDetails(String currentCoverage,
+            Integer batteryMonths, Integer batteryKm,
+            Integer motorMonths, Integer motorKm,
+            Integer inverterMonths, Integer inverterKm) {
+        try {
+            com.fasterxml.jackson.databind.JsonNode current = null;
+            if (currentCoverage != null && !currentCoverage.isEmpty()) {
+                current = objectMapper.readTree(currentCoverage);
+            }
+
+            if (current == null) {
+                return buildCoverageDetailsJson(batteryMonths, batteryKm, motorMonths, motorKm, inverterMonths,
+                        inverterKm);
+            }
+
+            // Update only provided fields
+            com.fasterxml.jackson.databind.node.ObjectNode root = objectMapper.createObjectNode();
+
+            com.fasterxml.jackson.databind.node.ObjectNode battery = objectMapper.createObjectNode();
+            if (current.has("battery")) {
+                battery.set("months", current.get("battery").get("months"));
+                battery.set("km", current.get("battery").get("km"));
+            }
+            if (batteryMonths != null) {
+                battery.put("months", batteryMonths);
+            }
+            if (batteryKm != null) {
+                battery.put("km", batteryKm);
+            }
+            root.set("battery", battery);
+
+            com.fasterxml.jackson.databind.node.ObjectNode motor = objectMapper.createObjectNode();
+            if (current.has("motor")) {
+                motor.set("months", current.get("motor").get("months"));
+                motor.set("km", current.get("motor").get("km"));
+            }
+            if (motorMonths != null) {
+                motor.put("months", motorMonths);
+            }
+            if (motorKm != null) {
+                motor.put("km", motorKm);
+            }
+            root.set("motor", motor);
+
+            com.fasterxml.jackson.databind.node.ObjectNode inverter = objectMapper.createObjectNode();
+            if (current.has("inverter")) {
+                inverter.set("months", current.get("inverter").get("months"));
+                inverter.set("km", current.get("inverter").get("km"));
+            }
+            if (inverterMonths != null) {
+                inverter.put("months", inverterMonths);
+            }
+            if (inverterKm != null) {
+                inverter.put("km", inverterKm);
+            }
+            root.set("inverter", inverter);
+
+            return objectMapper.writeValueAsString(root);
+        } catch (Exception e) {
+            return currentCoverage != null ? currentCoverage : "{}";
+        }
+    }
+
+    private WarrantyPolicyResponse toResponse(WarrantyPolicy policy) {
         WarrantyPolicyResponse response = new WarrantyPolicyResponse();
-
-        // Basic fields
         response.setId(policy.getId());
         response.setOemId(policy.getOemId());
-        response.setPolicyName(policy.getPolicyName());
         response.setPolicyCode(policy.getPolicyCode());
+        response.setPolicyName(policy.getPolicyName());
         response.setDescription(policy.getDescription());
-
-        // Warranty coverage fields
-        response.setWarrantyPeriodMonths(policy.getWarrantyPeriodMonths());
-        response.setWarrantyKmLimit(policy.getWarrantyKmLimit());
-
-        // Coverage details (JSON)
-        response.setCoverageDetails(policy.getCoverageDetails());
-
-        // Status fields
-        response.setIsActive(policy.getIsActive());
-        response.setIsDefault(policy.getIsDefault());
-
-        // Effective dates
         response.setEffectiveFrom(policy.getEffectiveFrom());
         response.setEffectiveTo(policy.getEffectiveTo());
-
-        // Timestamps
+        response.setWarrantyPeriodMonths(policy.getWarrantyPeriodMonths());
+        response.setWarrantyKmLimit(policy.getWarrantyKmLimit());
+        response.setCoverageDetails(policy.getCoverageDetails());
+        response.setIsActive(policy.getIsActive());
+        response.setIsDefault(policy.getIsDefault());
         response.setCreatedAt(policy.getCreatedAt());
         response.setCreatedByUserId(policy.getCreatedByUserId());
         response.setUpdatedAt(policy.getUpdatedAt());
         response.setUpdatedByUserId(policy.getUpdatedByUserId());
 
-        // Legacy fields for backward compatibility
-        response.setModel(extractModelFromPolicyName(policy.getPolicyName()));
-        response.setComponentCategory(extractCategoryFromPolicyName(policy.getPolicyName()));
-        response.setMonthsCoverage(policy.getWarrantyPeriodMonths());
-        response.setKmCoverage(policy.getWarrantyKmLimit());
-        response.setNotes("Policy: " + policy.getPolicyName() +
-                (Boolean.TRUE.equals(policy.getIsDefault()) ? " (Default)" : "") +
-                (Boolean.TRUE.equals(policy.getIsActive()) ? " (Active)" : " (Inactive)"));
+        // Legacy fields
+        response.setModel(policy.getModel());
+        response.setComponentCategory(policy.getComponentCategory());
+        response.setMonthsCoverage(policy.getMonthsCoverage());
+        response.setKmCoverage(policy.getKmCoverage());
+        response.setNotes(policy.getNotes());
 
         return response;
-    }
-
-    /**
-     * Extract model name from policy name
-     */
-    private String extractModelFromPolicyName(String policyName) {
-        if (policyName == null || !policyName.contains(" - ")) {
-            return "Unknown";
-        }
-        return policyName.split(" - ")[0];
-    }
-
-    /**
-     * Extract component category from policy name
-     */
-    private String extractCategoryFromPolicyName(String policyName) {
-        if (policyName == null || !policyName.contains(" - ")) {
-            return "General";
-        }
-        return policyName.split(" - ")[1];
     }
 }
